name:                ShootEmUp
version:             0.1.0.0
synopsis:            ShootEmUp game in Haskell
homepage:            index.html
license:             MIT
license-file:        LICENSE
author:              KDTS 
maintainer:          k.doekemeijer@students.uu.nl
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable ShootEmUp
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       directory
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules: Constants
                 Controller
                 FileManager
                 GameStateHelper
                 Model
                 Objects
                 Renderer
                 UpdateLogic
                 RNG
                 Vector2
                 GameOverModule
                 BeginModule
                 Collision


